tests/rt/pos/ifc/tlev01.trp
let val x = 42 raisedTo `<alice;#root-integrity>`
    val y = 10 raisedTo `<bob;#root-integrity>`
    val c = 100 raisedTo `<charlie;#root-integrity>`
    val d = 200 raisedTo `<dorothy;#root-integrity>`
    (* val z = let pini authority val x = if x + y > 100 then 10 else 20 in x end  *)

    val a = 
            let pini attenuate (authority, `<charlie;#root-integrity>`) val a = 
                  if c > 10 then 
                            x + y
                         else 
                            x - y
            in a end 

    val _ = printWithLabels a   
    val _ = x + y       
    val _ = adv ()

    

    val p = if d > 100 then a + 1 else 0

    val _ = printWithLabels p

    (* val w = x + y  *)
    (* val y = declassify (z, authority, {}) *)
    (* val _ = printWithLabels y *)
    (* val _ = printWithLabels z *)
    (* val _ = printWithLabels w *)
in ()
end
